# sidecar_os

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
sidecar_os/cli/: sidecar.py
sidecar_os/cli/commands/: __init__.py  artifacts.py  core.py
sidecar_os/core/sidecar_core/: intelligent_ask.py
sidecar_os/core/sidecar_core/artifacts/: __init__.py  store.py
sidecar_os/core/sidecar_core/events/: __init__.py  schemas.py  store.py
sidecar_os/core/sidecar_core/llm/: __init__.py  prompts.py  service.py  usage_tracker.py
sidecar_os/core/sidecar_core/llm/providers/: __init__.py  base.py  bedrock.py  mock.py
sidecar_os/core/sidecar_core/parsing/: __init__.py  models.py
sidecar_os/core/sidecar_core/projects/: __init__.py  cleanup.py  matcher.py  migration.py
sidecar_os/core/sidecar_core/router/: __init__.py  interpreter.py
sidecar_os/core/sidecar_core/state/: __init__.py  models.py  projector.py
sidecar_os/core/sidecar_core/summaries/: __init__.py  generator.py
tests/cli/: __init__.py  test_core_integration.py  test_enhanced_cli.py  test_enhanced_commands.py  test_sidecar.py
tests/core/: __init__.py  test_events.py  test_interpreter.py  test_llm_service.py  test_projects.py  test_state.py
